fix home page products images alignment issue

--- a/src/components/products/product-card/product-card.module.scss
+++ b/src/components/products/product-card/product-card.module.scss
@@ -8,8 +8,7 @@
   .image {
     width: 100%;
     max-width: 200px;
-    height: fit-content;
-    max-height: 200px;
+    aspect-ratio: 1 / 1;
   }
   .description {
     font-size: 1.2rem;
